# medical_asr

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  backend.py  config.py  db.py  docker-compose.yml  document_generator.py  download.py  interface.py  pipeline.py  prompt_render.py  pyproject.toml  requirements.txt  utils.py
backend/: app.py  config.py  document_generator.py  download_model.py  pipeline.py  prompt_render.py  requirements.txt  utils.py
backend/prompts/dialogue_labeling/: system_prompt.jinja  user_prompt.jinja
backend/prompts/medical_card/: system_prompt.jinja  user_prompt.jinja
backend/promts/: system_prompt.jinja
backend/utils/: __init__.py  api_models.py  logger.py  medical_card_models.py  speaker_label_models.py
deploy/: docker-compose.yml
frontend/: Dockerfile  app.py  client.py
promts/: user_prompt.jinja
